--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: Abundant Skyblock
+name: Abundant-Skyblock
 version: '${project.version}'
 main: net.abundantmc.abundantskyblock.AbundantSkyblock
-api-version: 1.20
+api-version: '1.20'
 commands:
   gamemode:
     description: Gamemode Command
