--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,8 @@ commands:
     usage: /warpgui
     permission: abundant.command.warpgui
     permission-message: You do not have permission for this!
+  warps:
+    description: Lists all warps
+    usage: /warps
+    permission: abundant.command.warps
+    permission-message: You do not have permission for this!
