Created setwarp command.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,8 @@ commands:
     usage: /warps
     permission: abundant.command.warps
     permission-message: You do not have permission for this!
+  setwarp:
+    description: sets a warp at player's location
+    usage: /setwarp <warpname>
+    permission: abundant.command.setwarp
+    permission-message: You do not have permission for this!
