--- a/abundant.properties
+++ b/abundant.properties
@@ -1,2 +1,2 @@
-connectionString = mongodb+srv://bubbarob19:eU9KQjJiYZkDXlXr@abundant.seqwl.mongodb.net/?retryWrites=true&w=majority
+connectionString = no :)
 database = skyblock
